<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity">

    <ProgressBar
        android:id="@+id/login_progress_bar"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/login_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_username"
        android:layout_marginTop="120dp"
        style="@style/EditTextStyle"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_user_name_text"
        android:layout_below="@id/login_user_name"
        style="@style/EditTextStyle"
        android:inputType="text" />

    <TextView
        android:id="@+id/login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_password"
        android:layout_below="@id/login_user_name_text"
        style="@style/EditTextStyle"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_password_edit_text"
        android:layout_below="@id/login_password"
        style="@style/EditTextStyle"
        android:inputType="textPassword"/>

    <CheckBox
        android:id="@+id/login_checkBox"
        android:text="Remember"
        android:layout_below="@id/login_password_edit_text"
        style="@style/EditTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/login_checkBox"/>

</RelativeLayout>